--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,26 +1,27 @@
+# APP
 APP_URL=
 NODE_ENV=
 
 # JWT
 APP_SECRET=
 
-# Database
+# DATABASE
 
 DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
 
-# Mongo
+# MONGO
 
 MONGO_URL=
 
-# Redis
+# REDIS
 
 REDIS_HOST=
 REDIS_PORT=
 
-# Mail
+# MAIL
 
 MAIL_HOST=
 MAIL_PORT=
